# genai_data_injector

./: .gitignore  README.md  pyproject.toml
fs_operations/: __init__.py  extension_mapper.py  file_reader.py  file_system.py  folder.py  main.py
fs_operations/config/: extension_mapping.json
fs_operations/reader/: image_file_reader.py  pdf_file_reader.py  text_file_reader.py
genai_inchoate_data/data_loader/: loader.py
genai_inchoate_data/data_parser/: data_parser.py  image_parser.py  json_parser.py  parser.py  pdf_parser.py  text_parser.py  word_parser.py
genai_inchoate_data/data_store/: mongo_db.py
genai_inchoate_data/schema/: data_parser_schema.py  document.py
genai_inchoate_data/store/: mongo_db.py  store.py
genai_inchoate_data/utilities/: configurations.py  file_system.py
inchoate_data/: __init__.py
inchoate_data/configs/: configs.yaml
inchoate_data/data_loader/: loader.py
inchoate_data/data_parser/: __init__.py  excel_parser.py
inchoate_data/data_store/: store.py
inchoate_data/schema/: document.py
inchoate_data/utilities/: file_system.py
notebooks/: data_loader.ipynb  data_loader_T0_T1.ipynb  data_parser.ipynb  data_parser_T1_T2.ipynb  llama_index.ipynb  llama_index_reader.ipynb  pdf_example.ipynb
notebooks/storage/: default__vector_store.json  docstore.json  index_store.json
tests/: __init__.py  test.py  test_configurations.py  test_data_parser_schema.py  test_document.py  test_excel_parser.py  test_file_reader.py  test_file_system.py  test_get_logger.py  test_image_parser.py  test_json_parser.py  test_loader.py  test_mongo_db.py  test_pdf_parser.py  test_text_parser.py  test_word_parser.py
tests/resources/input/: sample.docx  sample.json  sample.txt  sample.xls
(+1 files in other folders)
