
[tool.poetry]
name = "genai_inchoate_data"
version = "0.1.0"
description = "The Document Parser Library is a Python library that provides a set of classes for parsing various types of documents, including PDFs, JSON files, text files, images, Word documents, and Excel spreadsheets. The library is designed to be extensible, allowing users to dynamically create parser objects based on the file type extension."
authors = ["Balakrishna Maduru <balakrishnamaduru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.7.1"
pypdf2 = "^3.0.1"
pymupdf = "^1.23.7"
tabula-py = "^2.9.0"
python-docx = "^1.1.0"
pillow = "^10.1.0"
pymongo = "^4.6.1"
mongomock = "^4.1.2"
pydantic = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
test = "pytest tests"

[tool.poetry.group.new_group.dependencies]

[tool.poetry.group.new_group]
optional = true